--- a/styles/blocks/other-services/_other-services.scss
+++ b/styles/blocks/other-services/_other-services.scss
@@ -3,21 +3,21 @@
 /* Section other-services.*/
 .other-services {
   &__list {
-    max-width: rem(708);
+    max-width: rem(952);
     margin-inline: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: auto auto;
     gap: fluid(24, 10);
   }
 }
 
-@include mobile-media {
+@include tablet-media {
   .other-services {
     &__list {
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: auto auto auto;
-      gap: fluid(100, 10);
+      column-gap: fluid(160, 10);
 
       &-item {
         justify-self: end;
