--- a/styles/blocks/special-offers/_special-offer.scss
+++ b/styles/blocks/special-offers/_special-offer.scss
@@ -22,17 +22,20 @@
       width: 100%;
       height: rem(220);
 
-      &::after {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        border-radius: var(--border-radius-small) var(--border-radius-small) 0 0;
-        background-color: #3b060526;
+      &--dark-filter {
+        &::after {
+          content: "";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          right: 0;
+          top: 0;
+          bottom: 0;
+          border-radius: var(--border-radius-small) var(--border-radius-small) 0
+            0;
+          background-color: #3b060526;
+        }
       }
     }
 
