--- a/styles/pages/addresses-page/addresses.css
+++ b/styles/pages/addresses-page/addresses.css
@@ -665,7 +665,6 @@ button[aria-label]::before {
   justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
-  flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
   padding-block: 0.84375rem;
@@ -674,14 +673,12 @@ button[aria-label]::before {
   text-transform: uppercase;
 }
 
-@media (width <= 91.31125rem) {
+@media (width <= 81.31125rem) {
   .header-menu__list {
-    justify-content: center;
+    flex-wrap: wrap;
   }
-}
-@media (width <= 85.68625rem) {
-  .header-menu__list {
-    max-width: 60rem;
+  .header-menu__item {
+    margin-inline: auto;
   }
 }
 @media (width <= 63.99875rem) {
@@ -910,13 +907,6 @@ button[aria-label]::before {
   }
   .header__buttons {
     column-gap: 1rem;
-  }
-}
-@media (width <= 30.06125rem) {
-  .header__button {
-    padding-inline: 0.625rem;
-    max-width: 10rem;
-    width: 100%;
   }
 }
 /*  ===================================  */
@@ -1255,7 +1245,7 @@ button[aria-label]::before {
   width: 100%;
   height: inherit;
   padding-inline: 0.0625rem 0.25rem;
-  padding-block: 0.0625rem 0;
+  padding-block: 0.125rem 0;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -1589,6 +1579,14 @@ button[aria-label]::before {
     flex-direction: column;
     align-items: stretch;
     gap: 0.625rem;
+  }
+}
+@media (width <= 35.93625rem) {
+  .appointment-choose__wrapper {
+    padding-inline: 1rem;
+  }
+  .appointment-choose__buttons {
+    max-width: unset;
   }
 }
 /*  ===================================  */
