--- a/styles/pages/offer-page/offer.css
+++ b/styles/pages/offer-page/offer.css
@@ -665,7 +665,6 @@ button[aria-label]::before {
   justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
-  flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
   padding-block: 0.84375rem;
@@ -674,14 +673,12 @@ button[aria-label]::before {
   text-transform: uppercase;
 }
 
-@media (width <= 91.31125rem) {
+@media (width <= 81.31125rem) {
   .header-menu__list {
-    justify-content: center;
+    flex-wrap: wrap;
   }
-}
-@media (width <= 85.68625rem) {
-  .header-menu__list {
-    max-width: 60rem;
+  .header-menu__item {
+    margin-inline: auto;
   }
 }
 @media (width <= 63.99875rem) {
@@ -912,13 +909,6 @@ button[aria-label]::before {
     column-gap: 1rem;
   }
 }
-@media (width <= 30.06125rem) {
-  .header__button {
-    padding-inline: 0.625rem;
-    max-width: 10rem;
-    width: 100%;
-  }
-}
 /*  ===================================  */
 /*  =============END header============  */
 /*  ===================================  */
@@ -978,137 +968,87 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  ==========END page-heading=========  */
 /*  ===================================  */
-/* Styles for block offer-card.Part of offers-list */
-.offer-card {
-  --offerCardTextColor: var(--text-color-dark);
-  color: var(--offerCardTextColor);
-  display: flex;
-  column-gap: 1.5rem;
+/* Styles for block offer-description.Part of section single-offer */
+.offer-description {
+  max-width: 52.1875rem;
 }
-.offer-card__image {
+.offer-description__heading {
+  font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
+  line-height: 1.3;
+  text-transform: uppercase;
+}
+.offer-description__heading:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+.offer-description__text {
+  margin-bottom: 1.875rem;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.offer-description__text p:not(:last-child) {
+  margin-bottom: clamp(0rem, -0.4651162791rem + 1.8604651163vw, 1rem);
+}
+.offer-description__text ul {
+  letter-spacing: var(--letter-spacing);
+  padding-inline: clamp(1.25rem, 1.1046511628rem + 0.5813953488vw, 1.5625rem);
+}
+.offer-description__text-address {
+  display: inline;
+}
+
+@media (width <= 47.99875rem) {
+  .offer-description__heading {
+    line-height: 1.2;
+  }
+  .offer-description__text {
+    letter-spacing: 0;
+  }
+  .offer-description__text ul {
+    margin-block: 0;
+  }
+  .offer-description__button {
+    display: block;
+    margin-inline: auto;
+    font-size: 1rem;
+  }
+}
+/* Styles for section single-offer.(offer page) */
+.single-offer {
+  display: flex;
+  gap: clamp(0.625rem, 0.2180232558rem + 1.6279069767vw, 1.5rem);
+  margin-block: 0 2.5rem;
+}
+.single-offer__image {
   width: inherit;
   height: inherit;
 }
-.offer-card__image-wrapper {
+.single-offer__image-wrapper {
   width: 25.25rem;
   height: 15.0625rem;
   flex-shrink: 0;
 }
-.offer-card__heading {
-  min-height: 3.25rem;
-  line-height: 1.3;
-  text-transform: uppercase;
-  margin-bottom: clamp(1rem, 0.9127906977rem + 0.3488372093vw, 1.1875rem);
-  color: inherit;
-}
-.offer-card__text {
-  font-size: clamp(0.75rem, 0.5755813953rem + 0.6976744186vw, 1.125rem);
-  margin-bottom: clamp(1rem, 0.9127906977rem + 0.3488372093vw, 1.1875rem);
-  flex-grow: 1;
-  min-height: 5.0625rem;
-  line-height: 1.5;
-  color: inherit;
-}
-.offer-card__link {
-  font-size: clamp(1rem, 0.9418604651rem + 0.2325581395vw, 1.125rem);
-  margin-bottom: 0;
-  font-weight: 600;
-  line-height: 1.5;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  transition-duration: var(--transition-duration) !important;
-  color: inherit;
-}
-.offer-card__button {
-  display: block;
-  justify-self: start;
-  transition-duration: var(--transition-duration) !important;
-  will-change: transform;
-}
 
-@media (width <= 47.99875rem) {
-  .offer-card {
-    --offerCardTextColor: var(--color-light);
-    position: relative;
+@media (width <= 63.99875rem) {
+  .single-offer {
+    flex-direction: column;
   }
-  .offer-card__image {
-    border-radius: inherit;
-    min-width: inherit;
+}
+@media (width <= 47.99875rem) {
+  .single-offer {
+    gap: 0;
+  }
+  .single-offer__image {
     object-fit: cover;
   }
-  .offer-card__image-wrapper {
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    min-width: 21.25rem;
-    height: 10.625rem;
-    border-radius: var(--border-radius-small);
-  }
-  .offer-card__image-wrapper::before {
-    content: "";
-    width: inherit;
-    height: inherit;
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background: var(--color-red-opcity-40);
-    border-radius: inherit;
-  }
-  .offer-card__content {
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 1.625rem 1.5rem;
-    z-index: 1;
-  }
-  .offer-card__heading {
-    line-height: 1.2;
-  }
-  .offer-card__text {
-    line-height: 1.16667;
-  }
-  .offer-card__heading, .offer-card__text {
-    min-height: unset;
-  }
-}
-/* Style for accent red link from common blocks */
-.accent-color-link {
-  font-weight: 700;
-  font-size: 0.8125rem;
-  line-height: 1.7;
-  letter-spacing: var(--letter-spacing);
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
-  color: var(--color-accent-600);
-}
-
-/*  ===================================  */
-/*  ===================================  */
-/* Styles for section offers.(special-offers page) */
-.offers {
-  margin-block: 0 2.5rem;
-}
-.offers__list {
-  display: flex;
-  flex-direction: column;
-  row-gap: clamp(0.625rem, -0.8284883721rem + 5.8139534884vw, 3.75rem);
-}
-
-@media (width <= 47.99875rem) {
-  .offers {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    row-gap: 0.625rem;
-  }
-  .offers__list {
-    width: 100%;
+  .single-offer__image-wrapper {
+    margin-inline: calc(var(--container-padding-x) * -1);
+    width: calc(100% + var(--container-padding-x) * 2);
+    height: 13.4375rem;
+    margin-bottom: 2.5rem;
   }
 }
 /*  =================================  */
-/*  ========END section offers=======  */
+/*  =====END section single-offer====  */
 /*  =================================  */
 /* Navigation footer section. part of footer */
 .footer-svc-links__heading {
@@ -1370,4 +1310,4 @@ button[aria-label]::before {
 /*  =============END footer============  */
 /*  ===================================  */
 
-/*# sourceMappingURL=offers.css.map */
+/*# sourceMappingURL=offer.css.map */
