--- a/styles/pages/rental-develop-page/rental-develop.css
+++ b/styles/pages/rental-develop-page/rental-develop.css
@@ -665,7 +665,6 @@ button[aria-label]::before {
   justify-content: space-between;
   align-items: center;
   font-size: clamp(0.9375rem, 0.8502906977rem + 0.3488372093vw, 1.125rem);
-  flex-wrap: wrap;
   column-gap: clamp(1rem, 0.3023255814rem + 2.7906976744vw, 2.5rem);
   row-gap: 1.0625rem;
   padding-block: 0.84375rem;
@@ -674,14 +673,12 @@ button[aria-label]::before {
   text-transform: uppercase;
 }
 
-@media (width <= 91.31125rem) {
+@media (width <= 81.31125rem) {
   .header-menu__list {
-    justify-content: center;
+    flex-wrap: wrap;
   }
-}
-@media (width <= 85.68625rem) {
-  .header-menu__list {
-    max-width: 60rem;
+  .header-menu__item {
+    margin-inline: auto;
   }
 }
 @media (width <= 63.99875rem) {
@@ -912,13 +909,6 @@ button[aria-label]::before {
     column-gap: 1rem;
   }
 }
-@media (width <= 30.06125rem) {
-  .header__button {
-    padding-inline: 0.625rem;
-    max-width: 10rem;
-    width: 100%;
-  }
-}
 /*  ===================================  */
 /*  =============END header============  */
 /*  ===================================  */
@@ -978,88 +968,704 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  ==========END page-heading=========  */
 /*  ===================================  */
-/* Styles for block offer-description.Part of section single-offer */
-.offer-description {
-  max-width: 52.1875rem;
+/* Section promo in the rental-develop-page*/
+.promo {
+  position: relative;
+  color: var(--text-color-light);
+  min-height: 37.5rem;
+  max-width: 120rem;
+  margin-inline: auto;
 }
-.offer-description__heading {
-  font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
-  line-height: 1.3;
-  text-transform: uppercase;
+.promo__background {
+  min-height: 37.5rem;
+  position: absolute;
+  z-index: -1;
+  max-width: 120rem;
 }
-.offer-description__heading:not(:last-child) {
-  margin-bottom: 1.25rem;
+.promo__background-image {
+  height: 37.5rem;
+  width: 120rem;
+  object-fit: cover;
+  object-position: right;
 }
-.offer-description__text {
-  margin-bottom: 1.875rem;
+.promo__body {
+  padding-block: clamp(4rem, 2.2848837209rem + 6.8604651163vw, 7.6875rem) 0;
+}
+.promo__title {
+  max-width: 34.375rem;
+  line-height: 1.27;
+  margin-bottom: 2.5rem;
+}
+.promo__subtitle {
+  margin-bottom: 2.5rem;
   line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-.offer-description__text p:not(:last-child) {
-  margin-bottom: clamp(0rem, -0.4651162791rem + 1.8604651163vw, 1rem);
-}
-.offer-description__text ul {
-  letter-spacing: var(--letter-spacing);
-  padding-inline: clamp(1.25rem, 1.1046511628rem + 0.5813953488vw, 1.5625rem);
-}
-.offer-description__text-address {
-  display: inline;
-}
-
-@media (width <= 47.99875rem) {
-  .offer-description__heading {
-    line-height: 1.2;
-  }
-  .offer-description__text {
-    letter-spacing: 0;
-  }
-  .offer-description__text ul {
-    margin-block: 0;
-  }
-  .offer-description__button {
-    display: block;
-    margin-inline: auto;
-    font-size: 1rem;
-  }
-}
-/* Styles for section single-offer.(offer page) */
-.single-offer {
-  display: flex;
-  gap: clamp(0.625rem, 0.2180232558rem + 1.6279069767vw, 1.5rem);
-  margin-block: 0 2.5rem;
-}
-.single-offer__image {
-  width: inherit;
-  height: inherit;
-}
-.single-offer__image-wrapper {
-  width: 25.25rem;
-  height: 15.0625rem;
-  flex-shrink: 0;
+  max-width: 28.8125rem;
 }
 
 @media (width <= 63.99875rem) {
-  .single-offer {
-    flex-direction: column;
+  .promo {
+    min-height: 30.125rem;
+  }
+  .promo .container {
+    --container-padding-x: 2.6875rem;
+  }
+  .promo__background {
+    min-height: 30.125rem;
+  }
+  .promo__background-image {
+    height: 30.125rem;
+    width: 63.9375rem;
+  }
+  .promo__body {
+    padding-block: 4.375rem 0;
+  }
+  .promo__title {
+    margin-bottom: 1.25rem;
+  }
+  .promo__subtitle {
+    max-width: 21rem;
+    font-size: 1rem;
+    margin-bottom: 1.25rem;
   }
 }
 @media (width <= 47.99875rem) {
-  .single-offer {
-    gap: 0;
+  .promo .container {
+    --container-padding-x: 0.75rem;
   }
-  .single-offer__image {
-    object-fit: cover;
+  .promo__background {
+    position: static;
   }
-  .single-offer__image-wrapper {
-    margin-inline: calc(var(--container-padding-x) * -1);
-    width: calc(100% + var(--container-padding-x) * 2);
-    height: 13.4375rem;
-    margin-bottom: 2.5rem;
+  .promo__background-image {
+    width: 47.9375rem;
+    margin-bottom: 0.6875rem;
+    object-position: left;
+  }
+  .promo__body {
+    display: flex;
+    flex-direction: column;
+    padding-block: 0;
+  }
+  .promo__title {
+    max-width: unset;
+    width: 100%;
+    position: absolute;
+    top: 2.75rem;
+    left: calc(var(--container-padding-x) * -1);
+    padding-inline: calc(var(--container-padding-x) * 2) 0;
+    font-size: 1.5rem;
+    text-align: center;
+    line-height: 1.3;
+  }
+  .promo__subtitle {
+    max-width: unset;
+    margin-bottom: 0.625rem;
+    color: var(--text-color-dark);
+    font-weight: 600;
+  }
+  .promo__subtitle p {
+    margin-bottom: 0;
+  }
+  .promo__button {
+    align-self: center;
   }
 }
-/*  =================================  */
-/*  =====END section single-offer====  */
-/*  =================================  */
+/*  ============================================  */
+/*  ====END promo block(rental-develop-page)====  */
+/*  ============================================  */
+/* Section pride-slogan. ( small text banner )*/
+.pride-slogan {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.875rem;
+}
+.pride-slogan--accent-bg {
+  background-color: var(--color-accent-200);
+  padding-block: 1.25rem;
+  max-width: 78.75rem;
+}
+.pride-slogan__image {
+  width: 3.75rem;
+  height: 3.75rem;
+  flex-shrink: 0;
+}
+.pride-slogan__text {
+  max-width: 52rem;
+  font-weight: 600;
+  line-height: 1.5;
+  color: var(--text-color-dark-secondary);
+  letter-spacing: var(--letter-spacing);
+}
+.pride-slogan__text--big {
+  line-height: 1.2;
+}
+
+@media (width <= 100.06125rem) {
+  .pride-slogan--accent-bg {
+    margin-inline: var(--container-padding-x);
+  }
+}
+@media (width <= 47.99875rem) {
+  .pride-slogan {
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 5rem;
+  }
+  .pride-slogan__text--big {
+    line-height: 1.5;
+    text-align: center;
+  }
+}
+/*================================*/
+/*====END section pride-slogan====*/
+/*================================*/
+/* Styles for section possobility-card. Part of section possobilities */
+.possobility-card {
+  max-width: 18.5625rem;
+  width: 100%;
+  height: auto !important;
+  padding: 1.25rem 1.25rem 0 1.25rem;
+  outline: var(--border-light);
+  border-radius: var(--border-radius-small);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.25rem;
+  background-color: var(--color-accent-axtra-light);
+}
+.possobility-card--small-indent {
+  row-gap: 0.625rem;
+}
+.possobility-card__image {
+  width: 3.75rem;
+  height: 3.75rem;
+  flex-shrink: 0;
+}
+.possobility-card__name {
+  line-height: 1.3;
+  text-align: center;
+  min-height: 3.625rem;
+}
+.possobility-card__text {
+  line-height: 1.5;
+  color: var(--text-color-dark-secondary);
+  flex-grow: 1;
+  margin-block: 0 0.5rem;
+}
+.possobility-card__text--static-font-size {
+  font-size: 1.125rem;
+}
+.possobility-card__list {
+  padding-block: 0 0.1875rem;
+}
+
+@media (width <= 63.99875rem) {
+  .possobility-card {
+    min-height: 17.0625rem;
+  }
+  .possobility-card--big-width-mobile {
+    max-width: 20rem;
+  }
+  .possobility-card__name {
+    min-height: 2.75rem;
+    line-height: 1.2;
+  }
+  .possobility-card__name--small-height-mobile {
+    min-height: 1.25rem;
+  }
+}
+/* Styles for section possobilities. */
+.possobilities {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  overflow: hidden;
+}
+.possobilities--small-margin-mobile {
+  margin-bottom: clamp(0rem, -2.238372093rem + 8.9534883721vw, 4.8125rem);
+}
+.possobilities__title {
+  margin-bottom: clamp(0rem, -2.238372093rem + 8.9534883721vw, 4.8125rem);
+}
+.possobilities__slider {
+  padding: 0.25rem 0.625rem;
+}
+.possobilities__slider--small-max-width {
+  max-width: 60.3125rem;
+}
+
+@media (width > 100.06125rem) {
+  .possobilities__list:has(li:nth-child(7n)) {
+    justify-content: center;
+  }
+}
+@media (width <= 63.99875rem) {
+  .possobilities__slider {
+    padding-block: 1.25rem;
+  }
+  .possobilities__list {
+    margin-left: calc(var(--container-padding-x) * -1);
+  }
+}
+/*  ===================================  */
+/*  =====END section possobilities ====  */
+/*  ===================================  */
+/* Styles for block-form callback-form.Part of section callback */
+.callback-form {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.9375rem;
+}
+.callback-form__fields {
+  display: flex;
+  flex-direction: column;
+  row-gap: 1.0625rem;
+}
+.callback-form__field {
+  height: 2.9375rem;
+  width: 100%;
+  padding-block: 0 0.5rem;
+}
+.callback-form__field-input {
+  padding: 0;
+  background-color: transparent;
+  border: none;
+  border-bottom: var(--border-light);
+  height: 100%;
+  width: inherit;
+  padding-block: 0.625rem;
+  padding-inline: 0.625rem;
+  transition-duration: var(--transition-duration);
+}
+.callback-form__field-input:focus {
+  outline: var(--border-light);
+  border-bottom: transparent;
+}
+.callback-form__field-input:focus::placeholder {
+  color: transparent;
+}
+.callback-form__field-input::placeholder {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  position: relative;
+  left: -0.625rem;
+}
+.callback-form__button {
+  align-self: center;
+  padding-inline: 3.3125rem;
+}
+.callback-form__button--big-padding {
+  padding-inline: 3.875rem;
+}
+
+@media (width <= 47.99875rem) {
+  .callback-form__fields {
+    row-gap: 1rem;
+  }
+  .callback-form__button {
+    font-size: 0.9375rem;
+    line-height: 1.7;
+  }
+}
+/* Styles for section callback. Block with a form for client contact */
+.callback__wrapper {
+  display: flex;
+  gap: 1.5rem;
+}
+.callback__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 45.1875rem;
+  width: 100%;
+  padding-block: 3.125rem;
+  padding-inline: 1.25rem;
+}
+.callback__title {
+  max-width: 34.1875rem;
+  line-height: 1.2;
+  text-transform: uppercase;
+  text-align: center;
+  margin-block: 0 0.5rem;
+}
+.callback__title--width-100 {
+  max-width: unset;
+  width: 100%;
+}
+.callback__title--rental-page {
+  margin-block: 0 1.6875rem;
+}
+.callback__form {
+  max-width: 34.1875rem;
+  margin-block: 0 0.5rem;
+}
+.callback__policy {
+  font-size: 1rem;
+  text-align: center;
+  letter-spacing: 0.026em;
+  width: 100%;
+  color: var(--text-color-dark-secondary);
+}
+.callback__policy-link {
+  display: inline;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+}
+.callback__image {
+  width: inherit;
+  height: inherit;
+}
+.callback__image-wrapper {
+  border-radius: var(--border-radius-small);
+  width: 32.0625rem;
+  height: 32rem;
+  flex-shrink: 0;
+}
+.callback__image-wrapper--rental-page {
+  height: 34.5rem;
+}
+
+@media (width <= 81.31125rem) {
+  .callback__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .callback__body {
+    max-width: 100%;
+  }
+  .callback__form {
+    max-width: 100%;
+  }
+}
+@media (width <= 63.99875rem) {
+  .callback__wrapper {
+    flex-direction: row;
+  }
+  .callback__body {
+    padding-inline: 0;
+  }
+  .callback__title {
+    text-align: start;
+  }
+  .callback__image-wrapper {
+    width: 22.5rem;
+    height: 22.5rem;
+  }
+}
+@media (width <= 47.99875rem) {
+  .callback__wrapper {
+    padding-inline: 1.25rem;
+    flex-direction: column;
+  }
+  .callback__title {
+    text-align: center;
+    line-height: 1.5;
+  }
+  .callback__title--rental-page {
+    margin-block: 0 0.625rem;
+  }
+  .callback__body {
+    padding-block: 3.125rem 0;
+  }
+  .callback__policy {
+    font-size: 0.9375rem;
+  }
+}
+/*  ===================================  */
+/*  ========END section callback=======  */
+/*  ===================================  */
+/* Styles for section our clients( slider with companies logos ) . source -- home page */
+.our-clients {
+  overflow-x: hidden;
+}
+.our-clients__slider {
+  --clientsSlideWidth: 11.875rem;
+  --clientsSlideHeight: 7.1875rem;
+  min-height: calc(var(--clientsSlideHeight) + 0.125rem);
+}
+.our-clients__slide {
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+}
+.our-clients__link {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  outline: var(--border-extra-light);
+  background-color: var(--color-light);
+  border-radius: var(--border-radius-small);
+}
+@media (any-hover: hover) {
+  .our-clients__link:hover {
+    filter: opacity(100);
+  }
+  .our-clients__link:hover .our-clients__image {
+    filter: brightness(80%);
+  }
+}
+@media (any-hover: hover) and (any-hover: none) {
+  .our-clients__link:active {
+    filter: opacity(100);
+  }
+  .our-clients__link:active .our-clients__image {
+    filter: brightness(80%);
+  }
+}
+.our-clients__link:active .our-clients__image {
+  scale: 0.98;
+}
+.our-clients__image {
+  transition-duration: var(--transition-duration);
+  width: var(--clientsSlideWidth);
+  height: var(--clientsSlideHeight);
+  border-radius: inherit;
+}
+
+/*  ===================================  */
+/*  =======END section our clients=====  */
+/*  ===================================  */
+/* Styles for section about-description.*/
+.about-description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4.25rem;
+  margin-bottom: 5rem;
+}
+.about-description__image {
+  width: inherit;
+  height: inherit;
+}
+.about-description__image-wrapper {
+  flex-shrink: 0;
+  width: 38.625rem;
+  height: 33.125rem;
+}
+.about-description__body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 2.5rem;
+}
+.about-description__title {
+  line-height: 1.2;
+}
+.about-description__text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--text-color-dark-secondary);
+}
+.about-description__text ul {
+  padding-left: 1.375rem;
+  list-style: circle;
+}
+.about-description__text ul:not(:last-child),
+.about-description__text p:not(:last-child) {
+  margin-bottom: 0.9375rem;
+  margin-top: 0;
+}
+.about-description__button {
+  align-self: start;
+  font-size: 1rem !important;
+}
+
+@media (width <= 81.31125rem) {
+  .about-description {
+    flex-direction: column;
+  }
+  .about-description__title {
+    text-align: center;
+  }
+  .about-description__button {
+    align-self: center;
+  }
+}
+@media (width <= 47.99875rem) {
+  .about-description {
+    margin-bottom: 8.125rem;
+  }
+  .about-description__image-wrapper {
+    width: 22.5rem;
+    height: 22.5rem;
+  }
+  .about-description__body {
+    row-gap: 2.375rem;
+  }
+  .about-description__title {
+    text-align: left;
+    line-height: 1.5;
+  }
+  .about-description__text ul {
+    padding-left: 1.0625rem;
+  }
+  .about-description__text ul:not(:last-child),
+  .about-description__text p:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+/*  ======================================  */
+/*  =====END section about-description====  */
+/*  ======================================  */
+/* Block-card for advantage slider( our-advantage ).Part of Section advantages. Differences from blocks advantages in background color and positioning of the card*/
+.advantage-card {
+  --advantageCardTitleTextColor: var(--color-gray-800);
+  --ourAdvantageCardBgColor: var(--color-accent-200);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 1.1875rem;
+  max-width: 18.5625rem;
+  width: 100%;
+  padding: 1.1875rem 1.25rem 1.5625rem;
+  border: var(--border-light);
+  border-radius: var(--border-radius-small);
+  background-color: var(--ourAdvantageCardBgColor);
+}
+.advantage-card__image {
+  width: 3.75rem;
+  height: 3.75rem;
+}
+.advantage-card__heading {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--advantageCardTitleTextColor);
+}
+.advantage-card__text {
+  color: var(--text-color-dark-secondary);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+@media (width <= 47.99875rem) {
+  .advantage-card {
+    padding: 1.25rem 1.25rem 1.125rem;
+  }
+  .advantage-card__heading {
+    font-size: 0.9375rem;
+    line-height: 1.5;
+  }
+}
+/* Section advantages.Slider(our-advantage). Differences from the advantages section, in the cards.*/
+.advantages {
+  --advantagesSlidesQuantity: 4;
+  overflow-x: hidden;
+}
+.advantages__title {
+  margin-bottom: 3.125rem;
+}
+.advantages__slider-wrapper {
+  display: grid;
+  grid-template-rows: auto !important;
+  grid-template-columns: repeat(var(--advantagesSlidesQuantity), 18.5625rem);
+  column-gap: 1.5rem;
+}
+.advantages__buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 1.25rem;
+}
+.advantages__button {
+  font-size: 1rem;
+}
+
+@media (width <= 63.99875rem) {
+  .advantages__slider {
+    margin-block: 0 1.25rem;
+  }
+  .advantages__buttons {
+    column-gap: 1rem;
+    justify-content: start;
+  }
+}
+@media (width <= 47.99875rem) {
+  .advantages__slider-wrapper {
+    column-gap: 0.625rem;
+  }
+}
+/*  ===================================  */
+/*  =======END section advantages======  */
+/*  ===================================  */
+/* Styles for section about-gallery.*/
+.about-gallery {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.about-gallery__subtitle {
+  max-width: 52rem;
+  font-size: 1.125rem;
+  letter-spacing: 0.02em;
+  text-align: start;
+}
+.about-gallery__list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+  max-width: 75.1875rem;
+  margin-inline: auto;
+  margin-bottom: 3.125rem;
+}
+.about-gallery__list-item {
+  flex-shrink: 0;
+}
+.about-gallery__image {
+  width: inherit;
+  height: inherit;
+}
+.about-gallery__image-wrapper {
+  width: 23.5rem;
+  height: 18.8125rem;
+}
+.about-gallery__image-wrapper--big-width {
+  width: 25.375rem;
+}
+.about-gallery__button {
+  font-size: 1rem;
+}
+
+@media (width <= 100.06125rem) {
+  .about-gallery__list {
+    flex-wrap: wrap;
+  }
+}
+@media (width <= 63.99875rem) {
+  .about-gallery__list {
+    justify-content: center;
+  }
+}
+@media (width <= 47.99875rem) {
+  .about-gallery {
+    gap: 3.125rem;
+  }
+  .about-gallery__title {
+    margin-bottom: 0;
+  }
+  .about-gallery__subtitle {
+    margin-bottom: 0;
+  }
+  .about-gallery__list {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .about-gallery__image-wrapper--small-height {
+    height: 15.75rem;
+  }
+}
+/*  ==================================  */
+/*  =====END section about-gallery====  */
+/*  ==================================  */
 /* Navigation footer section. part of footer */
 .footer-svc-links__heading {
   font-size: 1rem;
@@ -1320,4 +1926,4 @@ button[aria-label]::before {
 /*  =============END footer============  */
 /*  ===================================  */
 
-/*# sourceMappingURL=offer.css.map */
+/*# sourceMappingURL=rental-develop.css.map */
