--- a/styles/blocks/about/_about-description.scss
+++ b/styles/blocks/about/_about-description.scss
@@ -30,7 +30,7 @@
 
   &__text {
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: var(--letter-spacing-medium);
     color: var(--text-color-dark-secondary);
 
     ul {
