--- a/styles/blocks/overview-services/overview-services.css
+++ b/styles/blocks/overview-services/overview-services.css
@@ -215,6 +215,8 @@
     right: 16px;
   }
 }
+/* =============================== */
+/* =============================== */
 /* Styles for section overview-services on the home page */
 .overview-services {
   display: flex;
