--- a/styles/blocks/about/_about-gallery.scss
+++ b/styles/blocks/about/_about-gallery.scss
@@ -8,7 +8,7 @@
   &__subtitle {
     max-width: rem(832);
     font-size: rem(18);
-    letter-spacing: 0.02em;
+    letter-spacing: var(--letter-spacing-medium);
     text-align: start;
   }
 
