--- a/styles/blocks/advantages/_our-advantage-card.scss
+++ b/styles/blocks/advantages/_our-advantage-card.scss
@@ -32,7 +32,7 @@
   &__text {
     color: var(--text-color-dark-secondary);
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: var(--letter-spacing-medium);
   }
 }
 
