--- a/styles/blocks/offers/_offer-description.scss
+++ b/styles/blocks/offers/_offer-description.scss
@@ -17,7 +17,7 @@
   &__text {
     margin-bottom: rem(30);
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: var(--letter-spacing-medium);
 
     p {
       &:not(:last-child) {
