--- a/styles/blocks/page-heading/_page-heading.scss
+++ b/styles/blocks/page-heading/_page-heading.scss
@@ -50,6 +50,10 @@
 
       line-height: 1.5;
     }
+
+    &--letter-spacing {
+      letter-spacing: var(--letter-spacing-big);
+    }
   }
 }
 @include tablet-media {
